--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="#home"><span class="navbar__items">HOME</span></a>
             <a href="#news"><span class="navbar__items">About us</span></a>
             <a href="#contact"><span class="navbar__items">contact</span></a>
-            <a href="#popup"><span class="navbar__items-right">login</span></a>
-            <a href="signup.html"><span class="navbar__items-right">signup</span></a>
+            <a style="float: right;" href="#popup"><span class="navbar__items-right">login</span></a>
+            <a style="float: right;" href="signup.html"><span class="navbar__items-right">signup</span></a>
         </div>
        
 
