--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--LINKS-->
         <link rel="shortcut icon" href="img/favicon.jpeg" type="image/x-icon" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
         <script type="text/javascript" src="main.js"></script>
@@ -236,6 +237,23 @@
                             <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
                         </ul>
+                    </div>
+                    <div class="middle">
+                        <a class="btn-footer-icons" href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="btn-footer-icons" href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a class="btn-footer-icons" href="#">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a class="btn-footer-icons" href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn-footer-icons" href="#">
+                            <i class="fab fa-youtube"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="col-1-of-2">
