Final Profile Page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -16,29 +16,33 @@
 
     <!--LINKS-->
     <link rel="shortcut icon" href="../img/favicon.jpeg" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Nunito:400,300" rel="stylesheet" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/profile.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Nunito:400,300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" type="text/css" href="profile_1.css">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
     <script type="text/javascript" src="main.js"></script>
 
     <title>MED-6 | Profile</title>
 </head>
 
-<body>
-   <form> 
-      <h1>Sign Up</h1>
+<body id="bod">
+  <div class="container">
+
+    <form>
+    <div class="bc"> 
+      <h1>Profile Page</h1>
       <fieldset>
 
         <legend><span class="section">1</span>Your Basic Info</legend>
 
-        <label for="username">Username:</label>
-        <input type="text" name="username">
+        <!-- <label for="username">Username:</label> -->
+        <input type="text" name="username" placeholder="Username">
 
-        <label for="email">Email:</label>
-        <input type="email" name="email">
+        <!-- <label for="email">Email:</label> -->
+        <input type="email" name="email" placeholder="Email ID">
 
         <label for="file">Choose Profile Picture:</label>
-        <input type="file" name="file1">
+        <input type="file" name="file1" >
         <input type="submit" name="Upload">
 
       </fieldset>
@@ -48,8 +52,8 @@
 
         <legend><span class="section">2</span>Your Profile</legend>
 
-        <label for="password">Password:</label>
-        <input type="password" name="password">
+        <!-- <label for="password">Password:</label> -->
+        <input type="password" name="password" placeholder="Password">
 
         <label>Gender:</label>
       
@@ -58,18 +62,24 @@
       
         <input type="radio" name="gender" value="female">
         <label class="light" for="female">Female</label>
+        <br>
 
-        <br><label for="address">Address:</label>
-        <textarea name="address"></textarea>
 
-        <label>Phone No. :</label>
-        <input type="Phone" name="phone">
+        <br><!-- <label for="date">Date</label> -->
+        <input type="date" name="date" placeholder="Date">
+
+        <br><!-- <label for="address">Address:</label> -->
+        <textarea name="address" placeholder="Address"></textarea>
+
+        <!-- <label>Phone No. :</label> -->
+        <input type="Phone" name="phone" placeholder="Phone No.">
 
       </fieldset>
 
       <button type="submit">Sign Up</button>
-
-    </form>  
+</div>
+    </form>
+    </div>
 </body>
 
 </html>
