--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#aboutus"><span class="navbar__items">About us</span></a>
             <a href="#contact"><span class="navbar__items">contact</span></a>
             <a style="float: right" href="#popup"><span class="navbar__items-right">login</span></a>
-            <a style="float: right" href="signup.html"><span class="navbar__items-right">signup</span></a>
+            <a style="float: right" href="profile.html"><span class="navbar__items-right">signup</span></a>
         </div>
        
 
