--- a/index.html
+++ b/index.html
@@ -187,15 +187,14 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/helenalopes.jpg" alt="doctors review" class="story__img">
-                            <figcaption class="story__caption">Marry smith</figcaption>
+                            <figcaption class="story__caption">Mansi Gupta</figcaption>
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">
-                                i had the best weeek ever with my family
+                                This site is a blessing for me
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia animi amet deleniti inventore maxime
-                                sed nisi eligendi cupiditate odio quos, id porro ratione veniam ducimus?
+                                I have been using this app for around a month to book appointments for my granny how is suffering from Osteoporosis .There one of a kind TOKEN system really saves a lot of time ,and my granny never waits in lines to get an appointment .<strong> Med-6</strong> always lives up to my expectations ,smooth interface, genuine service ,excellent custumer support.Keep it up Med6.
                             </p>
                         </div>
                     </div>
@@ -205,16 +204,14 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/helenalopes.jpg" alt="person review" class="story__img">
-                            <figcaption class="story__caption">jack wilson</figcaption>
+                            <figcaption class="story__caption">Jack Sparrow</figcaption>
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">
                                 wow my life is completely different now
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia animi amet deleniti inventore maxime
-                                sed
-                                nisi eligendi cupiditate odio quos, id porro ratione veniam ducimus?
+                                I was suffering from tonsils but due to heavy work load i couldn't visit my doctor. This was a perfect solution ,i met Dr Mehra who not only solved my problem but also saveed my time by giving an online appointment. i a highly satisfied and appriciate efforts of Med6 and team.
                             </p>
                         </div>
                     </div>
