--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 This site is a blessing for me
                             </h3>
                             <p>
-                                I have been using this app for around a month to book appointments for my granny how is suffering from Osteoporosis .There one of a kind TOKEN system really saves a lot of time ,and my granny never waits in lines to get an appointment .<strong> Med-6</strong> always lives up to my expectations ,smooth interface, genuine service ,excellent custumer support.Keep it up Med6.
+                                I have been using this app for around a month to book appointments for my granny how is suffering from Osteoporosis .There one of a kind TOKEN system really saves a lot of time.<strong> Med-6</strong> always lives up to my expectations ,smooth interface, genuine service ,excellent custumer support.Keep it up Med6.
                             </p>
                         </div>
                     </div>
