--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         
         <!--        NAVIGATION      -->
         <div id="navbar">
-            <a href="#home"><span class="navbar__items">HOME</span></a>
+            <a href="#home"><div class="logoo"><span class="navbar__items">HOME</span></a></div>
             <a href="#aboutus"><span class="navbar__items">About us</span></a>
             <a href="#contact"><span class="navbar__items">contact</span></a>
             <a style="float: right" href="#popup"><span class="navbar__items-right">login</span></a>
-            <a style="float: right" href="pages/signup.html"><span class="navbar__items-right">signup</span></a>
+            <a style="float: right" href="signup.html"><span class="navbar__items-right">signup</span></a>
         </div>
        
 
@@ -117,9 +117,9 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="" alt="Photo 1" class="composition__photo composition__photo--p1">
-                            <img src="" alt="Photo 2" class="composition__photo composition__photo--p2">
-                            <img src="" alt="Photo 3" class="composition__photo composition__photo--p3">
+                            <img src="img/doctor_with_laptop.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/doctor_with_patiet.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/docotr_report.png" alt="Photo 3" class="composition__photo composition__photo--p3">
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/helenalopes.jpg" alt="doctors review" class="story__img">
+                            <img src="img/profile1.jpeg" alt="doctors review" class="story__img">
                             <figcaption class="story__caption">Mansi Gupta</figcaption>
                         </figure>
                         <div class="story__text">
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/helenalopes.jpg" alt="person review" class="story__img">
+                            <img src="img/profile2.jpg" alt="person review" class="story__img">
                             <figcaption class="story__caption">Jack Sparrow</figcaption>
                         </figure>
                         <div class="story__text">
