--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
     </head>
     <body>
         <!--        PRELOADER       -->
+        <div class="loader">
+    <img src="img/loading.gif" alt="Loading..." />
+          </div>
+        
         <preloader class="preloader">
 
         </preloader> 
         
         <!--        NAVIGATION      -->
         <div id="navbar">
-            <a href="#home"><div class="logoo"><span class="navbar__items">HOME</span></a></div>
+            <a href="#home"><span class="navbar__items">HOME</span></a>
             <a href="#aboutus"><span class="navbar__items">About us</span></a>
             <a href="#contact"><span class="navbar__items">contact</span></a>
             <a style="float: right" href="#popup"><span class="navbar__items-right">login</span></a>
