--- a/index.html
+++ b/index.html
@@ -211,19 +211,19 @@
                         </ul>
                     </div>
                     <div class="middle">
-                        <a class="btn-footer-icons" href="#">
+                        <a class="btn-footer-icons" href="https://www.facebook.com">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="btn-footer-icons" href="#">
+                        <a class="btn-footer-icons" href="https://twitter.com">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a class="btn-footer-icons" href="#">
+                        <a class="btn-footer-icons" href="https://www.google.com">
                             <i class="fab fa-google"></i>
                         </a>
-                        <a class="btn-footer-icons" href="#">
+                        <a class="btn-footer-icons" href="https://www.instagram.com">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="btn-footer-icons" href="#">
+                        <a class="btn-footer-icons" href="https://www.youtube.com">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
