--- a/index.html
+++ b/index.html
@@ -127,13 +127,39 @@
             </section>
 
 
-            <!--        BOOKING SECTION     -->s
+            <!--        BOOKING SECTION     -->
 
             <section class="section-booking" id="booknow">
                 <h2 class="u-center-text u-margin-bottom-small heading-secondary-two">make an appointment</h2>
-                <div class="booking-lay">
-     
-                </div> 
+                <div class="book__form">
+                                <form action="#" class="form">
+                                    <div class="booking__form" id="s1">
+                                  
+                                    <div class="form__group">
+                                        <input class="form__input" type="text" id="s2" name="" placeholder="Username" required>
+
+                                    <div class="form__group">
+                                        <input class="form__input"  type="text" id="s3" placeholder="Phone number" required>
+                                    </div>
+                                    <div class="form__group">
+                                        <input class="form__input" type="date" id="s4" required>
+                                    </div>
+                                    <div class="form__group">
+                                        <input class="form__input" type="time" id="s5"  required>
+                                    </div>
+                                        <select class="form__input" id="s6">
+                                            <option>hospital</option>           
+                                        </select>
+                                        <select class="form__input" id="s7">
+                                            <option>department</option>         
+                                        </select>
+                                        <select class="form__input" id="s8">
+                                            <option>doctor</option>         
+                                        </select><br>
+                                        <button class="btn btn--blue u-center-text  u-margin-bottom-small" id="btn-big">BOOK</button>
+                                    </div>
+                                </form>
+                            </div> 
             </section>
 
 
