--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                 <div class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Story</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Resources</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
                             <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
                         </ul>
