--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <a href="#" class="btn btn-text">read all stories &rarr;</a>
                 </div>
                  <div id="mybuttonn">
-<button class="feedbackk"><img class="sz" src="img/chat.png"> </button>
+<a href="pages/roomno.html"><button class="feedbackk"><img class="sz" src="img/chat.png"> </button></a>
 </div>
             </section>
                
