--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                         <select class="form__input" id="s8">
                                             <option>doctor</option>         
                                         </select><br>
-                                        <button class="btn btn--blue u-center-text  u-margin-bottom-small" id="btn-big">BOOK</button>
+                                        <button class="btn btn--blue u-center-text  u-margin-bottom-small" id="btn-big" onclick="alert('YOUR BOOKING IS COMPLETED!')">BOOK</button>
                                     </div>
                                 </form>
                             </div> 
