--- a/index.html
+++ b/index.html
@@ -269,11 +269,9 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">HARSHIT BARGUJAR AND TEAM </a> for his hackathon <a href="#"
+                        Built by <a href="#" class="footer__link">HARSHIT BARGUJAR AND TEAM-Fantastic-6 </a> for his hackathon and public usage only <a href="#"
                             class="footer__link">MED-6</a>.
-                        Copyright &copy; by Harshit Bargujar. You are 100% allowed to use this webpage for both personal
-                        and commercial use, but NOT to claim it as your own design. A credit to the original author, Harshit
-                        Bargujar, is of course highly appreciated!
+                        Copyright &copy; by Harshit Bargujar. the design is owned by the team only.Use site only for health promotion purpose only .Credit to original author is mu9ch appreciated! 
                     </p>
                 </div>
             </div>
