--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <!-- META TAGS -->
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta http-equiv="refresh" content="300"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="MED-6 Because health matters">
@@ -262,7 +262,9 @@
                     <p class="footer__copyright">
                         Built by <a href="#" class="footer__link">HARSHIT BARGUJAR AND TEAM-Fantastic-6(MRIDUL ,AMAY, SACHIN , MUKESH ,AAMIR) </a> for his hackathon and public usage only <a href="#"
                             class="footer__link">MED-6</a>.
-                        Copyright &copy; by Harshit Bargujar. the design is owned by the team only.Use site only for health promotion purpose only .Credit to original author is mu9ch appreciated! 
+                        Copyright &copy; by Harshit Bargujar and team, the design is owned by the team.Use site only for health promotion purpose only .Credit to original author is mu9ch appreciated!
+                        
+                        All rights are reserved.
                     </p>
                 </div>
             </div>
