--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">HARSHIT BARGUJAR AND TEAM-Fantastic-6(MRIDUL ,AMAY, SACHIN , MUKESH ,AAMIR) </a> for his hackathon and public usage only <a href="#"
+                        Built by <a href="#section-tour" class="footer__link">HARSHIT BARGUJAR AND TEAM-Fantastic-6(MRIDUL ,AMAY, SACHIN , MUKESH ,AAMIR) </a> for his hackathon and public usage only <a href="#section-tour"
                             class="footer__link">MED-6</a>.
-                        Copyright &copy; by Harshit Bargujar and team, the design is owned by the team.Use site only for health promotion purpose only .Credit to original author is mu9ch appreciated!
+                        Copyright &copy; by Harshit Bargujar and team, the design is owned by the team.Use site only for health promotion purpose only .Credit to original author is much appreciated!
                         
-                        All rights are reserved.
+                        All rights reserved &reg;.
                     </p>
                 </div>
             </div>
