--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
                         Built by <a href="#section-tour" class="footer__link">HARSHIT BARGUJAR AND TEAM-Fantastic-6(MRIDUL ,AMAY, SACHIN , MUKESH ,AAMIR) </a> for his hackathon and public usage only <a href="#section-tour"
-                            class="footer__link">MED-6</a>.
+                            class="footer__link">MED-6&trade;</a>.
                         Copyright &copy; by Harshit Bargujar and team, the design is owned by the team.Use site only for health promotion purpose only .Credit to original author is much appreciated!
                         
                         All rights reserved &reg;.
